create InMemoryBrokerMetadataRepository to store broker metadata + remove AssertionError
note: this is a temporary solution until we implement a proper metadata API